# BaiduAIDemo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
form/: InputWidget.cpp  InputWidget.h  form.ui
src/: Controller.cpp  Controller.h  SoundController.cpp  SoundController.h
